фінальна версія з юніт-тестами